objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Edit_Quote_Conga__c</fullName>
        <formula>HYPERLINK(&quot;/apex/testpage2?mode=edit&amp;qid=&quot;+Id+&quot;&amp;aid=&quot;+Account__r.Id+&quot;&amp;sesid=&quot;+$Api.Session_ID+&quot;&amp;servurl=&quot;+$Api.Enterprise_Server_URL_280, &quot;Edit Quote Details&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Quote_Conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit_Quote_in_CPR__c</fullName>
        <description>HYPERLINK(&quot;/apex/Quickquote? &amp;id=&quot; &amp; Id , &quot;Edit Quote Details&quot;, &quot;_blank&quot; )</description>
        <formula>IF(OR(ISPICKVAL($User.Country_Domain__c, &apos;rvar-fr&apos;),ISPICKVAL($User.Country_Domain__c, &apos;combo-fr&apos;)),
(IF(TRUE,HYPERLINK(&quot;/apex/TPO_RoofDetailstab?mode=edit&amp;qid=&quot;+Id+&quot;&amp;aid=&quot;+Account__r.Id,&quot;Editer la proposition détaillée&quot;, &quot;_blank&quot;),&quot;Your customer is in a location that is not available for roof rental.&quot;)),
(IF($User.Quote_Creation_Allowed__c, HYPERLINK(&quot;/apex/GPPInstallerSelection?Id=&quot;+ Id +&quot;&amp;acc=&quot;+ Account__r.Id +&quot;&amp;act=e&quot;, &quot;Edit Quote Details&quot;, &quot;_blank&quot;),&quot;QUOTE EDIT NOT ALLOWED&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Quote Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Smart_Pack_Price__c</fullName>
        <formula>System_Cost__c  -  Dealer_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective_Smart_Pack_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Elapsed_Time__c</fullName>
        <label>Elapsed Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Engineer__c</fullName>
        <label>Electrical Engineer</label>
        <picklist>
            <picklistValues>
                <fullName>Greg Ball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris Barker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jerry Caldwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrea Granillo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marc Johnson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Johnson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniel Sherwood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zlata Zoran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jemuel Solario</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electrical_Engineers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electrical Engineers</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electrical_Estimator__c</fullName>
        <label>Electrical Estimator</label>
        <picklist>
            <picklistValues>
                <fullName>Brad Harbridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carlos Babij</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Efficency_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Energy Efficency Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment_Installation_Value__c</fullName>
        <label>Equipment Installation Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escalator__c</fullName>
        <defaultValue>00.00</defaultValue>
        <description>Used to track PPA escalator</description>
        <label>Escalator</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimate_Urgent_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estimate Urgent Request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Federal_Tax_Credit__c</fullName>
        <formula>Total_Contract_Price__c * (3/10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Federal Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Proposal_Delivery__c</fullName>
        <label>Estimated Proposal Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimator__c</fullName>
        <label>Estimator</label>
        <picklist>
            <picklistValues>
                <fullName>Tyroan Hardy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derek Daymond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marco Miller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Conga_formula__c</fullName>
        <formula>IF((Is_Locked__c == FALSE),
HYPERLINK(&quot;https://www.appextremes.com/apps/Conga/PointMerge.aspx?sessionId=&quot; &amp; $Api.Session_ID &amp;
&quot;&amp;serverUrl=&quot; &amp; $Api.Partner_Server_URL_80 &amp;
&quot;&amp;id=&quot; &amp; Id &amp;
&quot;&amp;ReportId=[testRental]00OS0000000qRAZ?pv0=&quot; &amp; Id &amp; &quot;&amp;TemplateId=a2NS00000006UNS&quot; &amp;
&quot;&amp;fp0=1 &amp;SCHP=2 &amp;DS7=3 &amp;DS4=1 &amp;BML=Thank &amp;OCNR=1 &amp;LG3=2 &amp;OFN=&quot; &amp; Name &amp; &quot;-&quot; &amp; QuoteNumber ,
image(&quot;/servlet/servlet.FileDownload?file=015S0000000Tcu1&quot;,&quot;_blank&quot;)
),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FR Conga formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feasibility_Indicator__c</fullName>
        <description>New field for ABC calculation for FR TPO</description>
        <label>Feasibility Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filing_Status__c</fullName>
        <label>Filling Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_First_Base_Monthly_Pay__c</fullName>
        <formula>First_Monthly_Payment_Base_Amount__c  - IF( First_Monthly_Payment_Base_Amount__c  &gt; 0, 7.50,0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final First Base Monthly Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_First_Monthly_Total_Tax__c</fullName>
        <formula>IF ( Final_First_Base_Monthly_Pay__c &gt; 0, Final_First_Monthly_pay_Tax__c  +  Final_Partial_Prepayment_Tax__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final First Monthly Total Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_First_Monthly_pay_Tax__c</fullName>
        <formula>IF( Final_First_Base_Monthly_Pay__c  &gt; 0,  (Sales_Tax__c  * Final_First_Base_Monthly_Pay__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final First Monthly pay Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Lease_Number__c</fullName>
        <label>Final Lease Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Final_Page_4_Monthly_Total__c</fullName>
        <formula>If ( Final_First_Base_Monthly_Pay__c  &gt; 0, Final_Total_Yearly_Page_4__c + 1800 +  Partial_Prepayment__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Page 4 Monthly Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Partial_Prepay_w_Tax__c</fullName>
        <formula>Partial_Prepayment__c +  Final_Partial_Prepayment_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Partial Prepay w Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Partial_Prepayment_Tax__c</fullName>
        <formula>IF( Final_First_Base_Monthly_Pay__c &gt; 0, ( Sales_Tax__c  *  Partial_Prepayment__c  ) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Partial Prepayment Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Payment__c</fullName>
        <description>It&apos;s being send to create Cash contract and to oracle system for Purchase Order line items.</description>
        <formula>System_Cost__c - Progress_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Total_Yearly_Page_2__c</fullName>
        <label>Final Total Yearly Page 2</label>
        <summarizedField>Lease_Schedule__c.Final_Total_Yearly_Page_2__c</summarizedField>
        <summaryForeignKey>Lease_Schedule__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Final_Total_Yearly_Page_4__c</fullName>
        <label>Final Total Yearly Page 4</label>
        <summarizedField>Lease_Schedule__c.Final_Total_Yearly_Page_4__c</summarizedField>
        <summaryForeignKey>Lease_Schedule__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Financed_Amount__c</fullName>
        <description>It&apos;s a field to capture the financed amount from FinEng.</description>
        <label>Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Structure_Feasibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Structure Feasibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financier_Point_Percentage__c</fullName>
        <formula>(Cost_of_Financing__c /  Financed_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financier Point Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financing_Amendment_Notes__c</fullName>
        <label>Financing Amendment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Monthly_Payment_Base_Amount__c</fullName>
        <label>First Monthly Payment: Base Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Monthly_Payment_Est_Tax_on_Payme__c</fullName>
        <label>First Monthly Payment: Est Tax on Payme</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Monthly_Payment_Estimated_Payment__c</fullName>
        <label>First Monthly Payment: Estimated Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Monthly_Payment__c</fullName>
        <label>First Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fit_Annual_Esc__c</fullName>
        <label>Fit Annual Esc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fit_Rate__c</fullName>
        <description>New Field for ABC calculation used for TPO FR</description>
        <label>Actual FIT Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_PrePayment_Amount_Base_Amount__c</fullName>
        <label>Full PrePayment Amount: Base Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_PrePayment_Amount_Estimated_Paymen__c</fullName>
        <label>Full PrePayment Amount: Estimated Paymen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_PrePayment_Amount_Estimated_Tax_on__c</fullName>
        <label>Full PrePayment Amount: Estimated Tax on</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_Prepaid_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Prepaid Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Prepayment_of_Lease_Amount__c</fullName>
        <label>Full Prepayment of Lease Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_Proposal_or_Just_Pricing__c</fullName>
        <label>Full Proposal or Just Pricing?</label>
        <picklist>
            <picklistValues>
                <fullName>Full Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just Pricing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Derate_Factor__c</fullName>
        <label>General Derate Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Greater_than_25_Meters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Greater than 25 Meters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grid_Connection_Type__c</fullName>
        <label>Customer Consumption InstallationType</label>
        <picklist>
            <picklistValues>
                <fullName>Mono Phase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Phase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <label>Gross Margin %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IP_Fee__c</fullName>
        <label>IP Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ITC_Ineligible_Cost__c</fullName>
        <description>Commercial:
Field added as part of the Helix PPA project
PO: Miltos Vratimos
Projected Release WW21 - 2017</description>
        <label>ITC Ineligible Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive_Forms_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incentive Forms (completed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentives__c</fullName>
        <label>Incentives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentives_detail_1__c</fullName>
        <description>Incentives detail 1</description>
        <label>Incentives detail 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentives_detail_1_amt__c</fullName>
        <description>Incentives detail 1 amount</description>
        <label>Incentives detail 1 amt</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentives_detail_2__c</fullName>
        <description>Incentives detail 2</description>
        <label>Incentives detail 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentives_detail_2_amt__c</fullName>
        <description>Incentives detail 2 amount</description>
        <label>Incentives detail 2 amt</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentives_detail_3__c</fullName>
        <description>Production Incentive</description>
        <label>Incentives detail 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Cost_Estimate_On_Time__c</fullName>
        <label>Initial Cost Estimate On-Time</label>
        <picklist>
            <picklistValues>
                <fullName>On-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not On-Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Layout_On_Time__c</fullName>
        <label>Initial Layout On-Time</label>
        <picklist>
            <picklistValues>
                <fullName>On-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not On-Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Payment__c</fullName>
        <formula>Final_First_Base_Monthly_Pay__c  +  Final_First_Monthly_pay_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Simulation_On_Time__c</fullName>
        <label>Initial Simulation On-Time</label>
        <picklist>
            <picklistValues>
                <fullName>On-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not On-Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Single_Line_On_Time__c</fullName>
        <label>Initial Single-Line On-Time</label>
        <picklist>
            <picklistValues>
                <fullName>On-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not On-Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Site_Audit_On_Time__c</fullName>
        <label>Initial Site Audit On-Time</label>
        <picklist>
            <picklistValues>
                <fullName>On-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not On-Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Structural_Analysis_On_Time__c</fullName>
        <label>Initial Structural Analysis On-Time</label>
        <picklist>
            <picklistValues>
                <fullName>On-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not On-Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <description>Case# 00477298. This field is created to set Initial submitter for Quote approval process as per Barry Serafino request.</description>
        <label>Initial Submitter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>InstallDate__c</fullName>
        <label>InstallDate</label>
        <picklist>
            <picklistValues>
                <fullName>April 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <label>Install Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Fee__c</fullName>
        <formula>Dealer_Fees__c  -  Origination__c  -  Interconnect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Installation_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Installation Model. Created for Loan Backend Project</description>
        <label>Installation Model</label>
        <referenceTo>Installation_Model__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project: GPP
Description: Installer Partner for the Quote.</description>
        <inlineHelpText>Installer Partner for the Quote.</inlineHelpText>
        <label>Installer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Installer)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interconnect__c</fullName>
        <label>Interconnect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inv_0_Layout_0_ModuleCountPerString__c</fullName>
        <label>Inv 0, Layout 0: ModuleCountPerString</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inv_0_Layout_0_ParallelStringsCount__c</fullName>
        <label>Inv 0, Layout 0: ParallelStringsCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InverterModel__c</fullName>
        <label>InverterModel</label>
        <picklist>
            <picklistValues>
                <fullName>6.0 KW ( Model PVI-6000-OUTD-US( 208 V))</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_0_Layout_0_AxisTiltAngle__c</fullName>
        <label>Inverter 0, Layout 0: AxisTiltAngle</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_0_Layout_0_Shading_Month_10__c</fullName>
        <label>Inverter 0, Layout 0:Shading (Month 10)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_0_Layout_0_Shading_Month_11__c</fullName>
        <label>Inverter 0, Layout 0:Shading (Month 11)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_0_Layout_0_Shading_Month_12__c</fullName>
        <label>Inverter 0, Layout 0:Shading (Month 12)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_0_Layout_0_StandardPVModuleId__c</fullName>
        <label>Inverter 0, Layout 0: StandardPVModuleId</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_0_Layout_0_SystemAzimuth__c</fullName>
        <label>Inverter 0, Layout 0: SystemAzimuth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_0_StandarInverterId__c</fullName>
        <label>Inverter 0: StandarInverterId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Brand_2__c</fullName>
        <label>Inverter Brand 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Brand_3__c</fullName>
        <label>Inverter Brand 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Brand_4__c</fullName>
        <label>Inverter Brand 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Brand__c</fullName>
        <label>Inverter Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Count_Multiple_Roofs__c</fullName>
        <formula>Inverter_Count_Roof1__c +  Inverter_Count_Roof2__c + Inverter_Count_Roof3__c + Inverter_Count_Roof4__c + Inverter_Quantity__c + Inverter_Quantity_2__c + Inverter_Quantity_3__c + Inverter_Quantity_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter Count Multiple Roofs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Count_Roof1__c</fullName>
        <label>Inverter Count Roof1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Count_Roof2__c</fullName>
        <label>Inverter Count Roof2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Count_Roof3__c</fullName>
        <label>Inverter Count Roof3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Count__c</fullName>
        <label>Inverter Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Manufacturer_Roof1__c</fullName>
        <label>Inverter Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Sunpower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powerone</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_Manufacturer_Roof2__c</fullName>
        <label>Inverter Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Sunpower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powerone</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_Manufacturer_Roof3__c</fullName>
        <label>Inverter Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Sunpower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powerone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_Manufacturer__c</fullName>
        <label>Inverter Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Power One</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Power</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_2__c</fullName>
        <label>Inverter Model 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_3__c</fullName>
        <label>Inverter Model 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_4__c</fullName>
        <label>Inverter Model 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_Roof1__c</fullName>
        <label>Inverter Model Roof 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_Roof2__c</fullName>
        <label>Inverter Model Roof 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Model_Roof3__c</fullName>
        <label>Inverter Model Roof 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Model__c</fullName>
        <label>Inverter Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>